# wastee-api

./: .gitignore  README.md  credentials.json  db.sqlite3  manage.py  populate_db.py  pyproject.toml  render.yaml  requirements.txt  token.json
api/: gerar_token.py  models.py  serializers.py  urls.py  utils.py  views.py
api/migrations/: 0001_initial.py  0002_remove_user_password_hash_user_is_staff_and_more.py  0003_alter_product_discounted_price_alter_product_rate_and_more.py  0004_user_groups_user_is_superuser_user_user_permissions.py  0005_remove_productimage_image_url_productimage_image_and_more.py  0006_alter_productimage_image.py  0007_user_user_type.py  0008_alter_product_category_alter_product_seller_and_more.py  0009_remove_seller_address_seller_birth_date_seller_cpf_and_more.py  0010_alter_chat_buyer_alter_chat_seller.py  0011_alter_message_chat.py  0012_chat_participants.py  0013_remove_chat_participants.py  0014_alter_comment_date_alter_comment_time.py  0015_alter_comment_product.py  0016_productimage_external_image_url_and_more.py
wastee/: asgi.py  settings.py  urls.py  wsgi.py
wastee/templates/: index.html
