[tool.poetry]
name = "wastee"
version = "0.1.0"
description = ""
authors = ["Luara Lima <luaralima205@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "4.12.2"
aiohttp-retry = "2.8.3"
aiosignal = "1.3.1"
annotated-types = "0.6.0"
anyio = "4.3.0"
asgiref = "3.7.2"
async-generator = "1.10"
async-timeout = "4.0.2"
attrs = "23.1.0"
blinker = "1.6.2"
build = "0.10.0"
cachecontrol = "0.12.14"
cachetools = "5.5.0"
certifi = "2023.5.7"
charset-normalizer = "3.1.0"
cleo = "2.0.1"
click = "8.1.3"
colorama = "0.4.6"
crashtest = "0.4.1"
distlib = "0.3.6"
django = "4.2.1"
django-cors-headers = "4.2.0"
djangorestframework = "3.14.0"
djangorestframework-simplejwt = "5.3.1"
dulwich = "0.21.5"
et-xmlfile = "1.1.0"
exceptiongroup = "1.1.1"
fastapi = "0.110.0"
filelock = "3.12.0"
flask = "2.3.2"
future = "0.18.3"
google-api-core = "2.20.0"
google-api-python-client = "2.147.0"
google-auth = "2.35.0"
google-auth-httplib2 = "0.2.0"
google-auth-oauthlib = "1.2.1"
googleapis-common-protos = "1.65.0"
h11 = "0.14.0"
html5lib = "1.1"
httplib2 = "0.22.0"
idna = "3.4"
importlib-metadata = "6.8.0"
installer = "0.7.0"
itsdangerous = "2.1.2"
jaraco-classes = "3.3.0"
jinja2 = "3.1.2"
jsonschema = "4.19.0"
jsonschema-specifications = "2023.7.1"
keyring = "23.13.1"
lockfile = "0.12.2"
markupsafe = "2.1.2"
more-itertools = "10.1.0"
msgpack = "1.0.5"
oauthlib = "3.2.2"
openpyxl = "3.1.2"
outcome = "1.2.0"
packaging = "23.1"
pexpect = "4.8.0"
pillow = "10.4.0"
pkginfo = "1.9.6"
platformdirs = "3.5.1"
poetry = "1.5.1"
poetry-core = "1.6.1"
poetry-plugin-export = "1.4.0"
proto-plus = "1.24.0"
protobuf = "5.28.2"
ptyprocess = "0.7.0"
pyasn1 = "0.6.1"
pyasn1-modules = "0.4.1"
pycparser = "2.21"
pydantic = "2.6.4"
pydantic-core = "2.16.3"
pyjwt = "2.7.0"
pyparsing = "3.1.4"
pyproject-hooks = "1.0.0"
pysocks = "1.7.1"
python-dateutil = "2.8.2"
python-decouple = "3.8"
python-dotenv = "1.0.0"
pytz = "2023.3"
pywin32-ctypes = "0.2.2"
rapidfuzz = "2.15.1"
referencing = "0.30.2"
requests = "2.30.0"
requests-oauthlib = "2.0.0"
requests-toolbelt = "1.0.0"
rsa = "4.9"
selenium = "4.9.1"
serializers = "0.2.4"
shellingham = "1.5.0.post1"
six = "1.16.0"
sniffio = "1.3.0"
sortedcontainers = "2.4.0"
soupsieve = "2.4.1"
sqlparse = "0.4.4"
starlette = "0.36.3"
tomlkit = "0.12.1"
tqdm = "4.65.0"
trio = "0.22.0"
trio-websocket = "0.10.2"
trove-classifiers = "2023.8.7"
twilio = "8.2.0"
typing-extensions = "4.10.0"
tzdata = "2023.3"
uritemplate = "4.1.1"
urllib3 = "1.26.16"
uvicorn = "0.29.0"
virtualenv = "20.23.0"
webdriver-manager = "3.8.6"
webencodings = "0.5.1"
werkzeug = "2.3.4"
wsproto = "1.2.0"
zipp = "3.16.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
